some stuff that works sometimes

--- a/src/viz/static/index.html
+++ b/src/viz/static/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header class="topbar">
-      <div class="brand">PartialAST Viz</div>
+      <div class="brand">Parser Visualizer</div>
       <div class="spacer"></div>
-      <a class="link" href="https://github.com/" target="_blank" rel="noreferrer">Docs</a>
+      <a class="link" href="/synth">Synthesis Viz</a>
     </header>
     <main class="layout">
       <section class="sidebar">
